Adding Font Awesome.

--- a/BasicProject/MvcAngular.Web/Views/Home/Index.cshtml
+++ b/BasicProject/MvcAngular.Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="span6">
             <h2>Home Page</h2>
             <p>
-                View <a href="@Url.Action("Bootstrap")">Bootstrap</a> template page.
+                View <a href="@Url.Action("Bootstrap")"><i class="icon-twitter"></i> Bootstrap</a> template page.
             </p>
         </div>
     </div>
