--- a/SimpleRouting/MvcAngular.Web/Views/Home/About.cshtml
+++ b/SimpleRouting/MvcAngular.Web/Views/Home/About.cshtml
@@ -2,4 +2,5 @@
     <div class="hero-unit">
         <h1>About -- Simple Routing</h1>
         <p>Version Number: {{version}}</p>
+        <p>Window is {{windowHeight}}px tall by {{windowWidth}}px wide.</p>
     </div>
