Adding simple data binding.

--- a/CRUDOperations/MvcAngular.Web/Views/Shared/_Layout.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,9 @@
                 padding-top: 60px;
                 padding-bottom: 40px;
             }
+            [ng\:cloak], [ng-cloak], .ng-cloak {
+                display: none;
+            }
         </style>
         @Styles.Render("~/Content/files/css-two")
         @Scripts.Render("~/bundles/files/modernizr")
