--- a/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
@@ -10,12 +10,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="/">Simple Routing</a>
+            <a class="brand" href="/">CRUD Operations</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class="active"><a href="#!/">Home</a></li>
-                    <li><a href="#!/About">About</a></li>
-                    <li><a href="#!/Contact">Contact</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -36,7 +34,6 @@
 
 @section scripts {
     <script src="@Url.Content("~/Scripts/app/home/homeModule.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/app/home/homeCtrl.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/app/home/aboutCtrl.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/app/home/contactCtrl.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/home/listCtrl.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/home/detailCtrl.js")" type="text/javascript"></script>
 }
