--- a/CRUDOperations/MvcAngular.Web/Views/Home/List.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/List.cshtml
@@ -1,26 +1,33 @@
 ﻿
 <div class="container">
-    <h4>People</h4>
-    <table class="table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Title</th>
-                <th>First</th>
-                <th>Middle</th>
-                <th>Last</th>
-                <th>Suffix</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="person in people">
-                <td><a ng-click="viewPerson(person.personId)"><i class="icon-edit"></i></a></td>
-                <td>{{person.title}}</td>
-                <td>{{person.firstName}}</td>
-                <td>{{person.middleName}}</td>
-                <td>{{person.lastName}}</td>
-                <td>{{person.suffix}}</td>
-            </tr>
-        </tbody>
-    </table>
+    
+    <div class="row-fluid">
+        <h4>People</h4>
+    </div>
+    
+    <div class="row-fluid">
+        <table class="table table-condensed table-hover">
+            <thead>
+                <tr>
+                    <th class="span1">&nbsp;</th>
+                    <th class="span1">Title</th>
+                    <th class="span3">First</th>
+                    <th class="span3">Middle</th>
+                    <th class="span3">Last</th>
+                    <th class="span1">Suffix</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="person in people">
+                    <td><a ng-click="viewPerson(person.personId)"><i class="icon-edit"></i></a></td>
+                    <td>{{person.title}}</td>
+                    <td>{{person.firstName}}</td>
+                    <td>{{person.middleName}}</td>
+                    <td>{{person.lastName}}</td>
+                    <td>{{person.suffix}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
