Adding CRUD operations implementations.

--- a/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
@@ -36,4 +36,6 @@
     <script src="@Url.Content("~/Scripts/app/home/homeModule.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/listCtrl.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/detailCtrl.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/home/editCtrl.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/home/peopleService.js")" type="text/javascript"></script>
 }
