--- a/CRUDOperations/MvcAngular.Web/Views/Home/Edit.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/Edit.cshtml
@@ -11,35 +11,35 @@
                 <div class="control-group">
                     <label class="control-label" for="title">Title</label>
                     <div class="controls row-fluid">
-                        <input type="text" name="title" data-ng-model="person.title" class="span3" readonly />
+                        <input type="text" name="title" data-ng-model="person.title" class="span3" />
                     </div>
                 </div>
 
                 <div class="control-group">
                     <label class="control-label" for="firstName">First Name</label>
                     <div class="controls row-fluid">
-                        <input type="text" name="firstName" data-ng-model="person.firstName" class="span8" readonly />
+                        <input type="text" name="firstName" data-ng-model="person.firstName" class="span8" />
                     </div>
                 </div>
 
                 <div class="control-group">
                     <label class="control-label" for="middleName">Middle Name</label>
                     <div class="controls row-fluid">
-                        <input type="text" name="middleName" data-ng-model="person.middleName" class="span7" readonly />
+                        <input type="text" name="middleName" data-ng-model="person.middleName" class="span7" />
                     </div>
                 </div>
 
                 <div class="control-group">
                     <label class="control-label" for="lastName">Last Name</label>
                     <div class="controls row-fluid">
-                        <input type="text" name="lastName" data-ng-model="person.lastName" class="span8" readonly />
+                        <input type="text" name="lastName" data-ng-model="person.lastName" class="span8" />
                     </div>
                 </div>
 
                 <div class="control-group">
                     <label class="control-label" for="suffix">Suffix</label>
                     <div class="controls row-fluid">
-                        <input type="text" name="suffix" data-ng-model="person.suffix" class="span3" readonly />
+                        <input type="text" name="suffix" data-ng-model="person.suffix" class="span3" />
                     </div>
                 </div>
 
@@ -79,15 +79,10 @@
                 </div>
 
                 <div class="control-group">
-                    <div class="row-fluid" data-ng-hide="isDeleteRequested">
+                    <div class="controls row-fluid">
                         <div class="span12">
+                            <button class="btn" data-ng-click="save()"><i class="icon-remove-sign"></i> Save</button>
                             <button class="btn" data-ng-click="returnToList()"><i class="icon-remove-sign"></i> Return to List</button>
-                        </div>
-                    </div>
-                    <div class="row-fluid" data-ng-show="isDeleteRequested">
-                        <div class="span12">
-                            <button class="btn" data-ng-click="deletePerson()"><i class="icon-trash"></i> Confirm Delete</button>
-                            <button class="btn" data-ng-click="returnToList()"><i class="icon-remove-sign"></i> Cancel</button>
                         </div>
                     </div>
                     <div class="row-fluid" data-ng-show="errorMessage">
