--- a/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
@@ -33,9 +33,13 @@
 </div> <!-- /container -->
 
 @section scripts {
+    <script src="@Url.Content("~/Scripts/angular/angular-sanitize.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/homeModule.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/listCtrl.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/detailCtrl.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/editCtrl.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/peopleService.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/home/addressFilter.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/home/microDataAddressFilter.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/home/microDataAddressDirective.js")" type="text/javascript"></script>
 }
