Additional example of filter.

--- a/CRUDOperations/MvcAngular.Web/Views/Home/ContactInfoList.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/ContactInfoList.cshtml
@@ -33,6 +33,7 @@
 </div>
 
 
+@*{{postalAddr.lineOne | uppercase}}*@
 @*{{postalAddr | address}}*@
 @*<span ng-bind-html="postalAddr | address"></span>*@
 @*<span ng-bind-html="postalAddr | microdataaddress"></span>*@
