Adding grid column template handling.

--- a/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
@@ -17,7 +17,8 @@
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li><a href="#!/">List</a></li>
-                    <li><a href="#!/grid">Grid</a></li>
+                    <li><a href="#!/grid-one">Grid 1</a></li>
+                    <li><a href="#!/grid-two">Grid 2</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             Examples
@@ -60,5 +61,6 @@
     <script src="@Url.Content("~/Scripts/jqgrid/i18n/grid.locale-en.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jqgrid/jquery.jqGrid.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/jqGridDirective.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/home/jqTemplateGridDirective.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/gridCtrl.js")" type="text/javascript"></script>
 }
