--- a/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container" ng-controller="homeCtrl">
     
     <div ng-view></div>
 
@@ -50,6 +50,7 @@
 @section scripts {
     <script src="@Url.Content("~/Scripts/angular/angular-sanitize.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/homeModule.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/home/homeCtrl.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/listCtrl.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/detailCtrl.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/app/home/editCtrl.js")" type="text/javascript"></script>
