--- a/CRUDOperations/MvcAngular.Web/Views/Home/ContactInfoList.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/ContactInfoList.cshtml
@@ -6,7 +6,8 @@
             <li ng-repeat="postalAddr in person.postalAddresses">
                 {{postalAddr.lineOne}} <br />
                 {{postalAddr.lineTwo}} <br />
-                {{postalAddr.city}}, {{postalAddr.stateProvince}} {{postalAddr.postalCode}}
+                {{postalAddr.city}}, {{postalAddr.stateProvince}} {{postalAddr.postalCode}} <br />
+                {{postalAddr.country}}
             </li>
         </ul>
     </div>
@@ -31,11 +32,3 @@
         </ul>
     </div>
 </div>
-
-
-@*{{postalAddr.lineOne | uppercase}}*@
-@*{{postalAddr | address}}*@
-@*<span ng-bind-html="postalAddr | address"></span>*@
-@*<span ng-bind-html="postalAddr | microdataaddress"></span>*@
-@*<span ng-bind-html-unsafe="postalAddr | microdataaddress"></span>*@
-@*<micro-data-address value="postalAddr"></micro-data-address>*@
