--- a/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
+++ b/CRUDOperations/MvcAngular.Web/Views/Home/Index.cshtml
@@ -5,47 +5,51 @@
 <link rel="stylesheet" type="text/css" media="screen" href="@Url.Content("~/Content/overcast/jquery-ui-1.10.3.custom.css")" />
 <link rel="stylesheet" type="text/css" media="screen" href="@Url.Content("~/Content/jqgrid/ui.jqgrid.css")" />
 
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="/">CRUD Operations</a>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li><a href="#!/">List</a></li>
-                    <li><a href="#!/grid-one">Grid 1</a></li>
-                    <li><a href="#!/grid-two">Grid 2</a></li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            Examples
-                            <b class="caret"></b>
-                          </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/examples/jqueryform">jQuery Form</a></li>
-                            <li><a href="/examples/jqgrid">jQuery Grid</a></li>
-                        </ul>
-                    </li>                    
-                </ul>
+<div ng-controller="homeCtrl">
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a class="brand" href="/">CRUD Operations</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li><a href="/">List</a></li>
+                        <li><a href="/grid-one">Grid 1</a></li>
+                        <li><a href="/grid-two">Grid 2</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                Examples
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/examples/jqueryform" target="_self">jQuery Form</a></li>
+                                <li><a href="/examples/jqgrid" target="_self">jQuery Grid</a></li>
+                            </ul>
+                        </li>                    
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="container">
+    
+        <div ng-view></div>
+
+        <hr>
+
+        <footer>
+            <p>&copy; Company 2012</p>
+        </footer>
+
+    </div>
 </div>
 
-<div class="container" ng-controller="homeCtrl">
-    
-    <div ng-view></div>
-
-    <hr>
-
-    <footer>
-        <p>&copy; Company 2012</p>
-    </footer>
-
-</div> <!-- /container -->
 
 @section scripts {
     <script src="@Url.Content("~/Scripts/angular/angular-sanitize.js")" type="text/javascript"></script>
